final curtain effect

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <div class="container">
       <span>
-        <h1 >Innov8itcode</h1>
+        <button>hello </button>
       </span>
     </div>
 
